Fix typos and formatting in configuration files

--- a/memoria/text/configTec.tex
+++ b/memoria/text/configTec.tex
@@ -6,7 +6,7 @@ En esta sección se han cumplido los objetivos correspondientes al 10.
 Este apartado aborda la gestión de las copias de seguridad en Odoo. Se va a hacer una evaluación de la configuración que ofrece para gestionar las bases de datos, la posibilidad de transferir los datos de Odoo de una instancia a otra y la capacidad de crear scripts para automatizar las copias de seguridad, las cuáles van a ser almacenadas en la nube.
 \subsection{Metodología}
 \paragraph{}
-El primer paso que se ha realizado ha sido dirigirnos a la siguiente dirección en el navegador \href{http://ec2-13-51-201-201.eu-north-1.compute.amazonaws.com:8069/web/database/manager}{http://ec2-13-51-201-201.eu-north-1.compute.amazonaws.com:8069/web/database/manager}. Se ha hecho click en \textit{Set Master Password} y se ha introducido una contraseña que será necesaria en las operaciones que se van a realizar en este módulo.
+El primer paso que se ha realizado ha sido dirigirnos a la siguiente dirección en el navegador:\\ \href{http://ec2-13-51-201-201.eu-north-1.compute.amazonaws.com:8069/web/database/manager}{http://ec2-13-51-201-201.eu-north-1.compute.amazonaws.com:8069/web/database/manager}. Se ha hecho click en \textit{Set Master Password} y se ha introducido una contraseña que será necesaria en las operaciones que se van a realizar en este módulo.
 \paragraph{}
 A continuación, Odoo ofrece una opción para crear una nueva base de datos, para ello se ha hecho click en \textit{Create Database} y se ha rellenado el formulario. Tras pulsar el botón de crear hay que esperar hasta que nos ha redirigido al inicio de sesión, una vez iniciado sesión con la información introducida anteriormente, ya puedes acceder a Odoo. 
 \paragraph{}
