--- a/memoria/text/configuracion.tex
+++ b/memoria/text/configuracion.tex
@@ -137,32 +137,34 @@ Este mensaje es normal que nos aparezca ya que nuestro certificado no es validad
 
 \subsection{Resultados y análisis}
 En primer lugar, se ha configurado la página web para que se pueda mostrar en 3 idiomas: Español, Inglés(UK) e Inglés(US), ya que son los 3 idiomas que se hablan donde se ubican las compañías. 
-\newpage
 \begin{figure}[h]
     \centering
     \includegraphics[width=1\linewidth]{fotosConfiguración/ubicaciones.jpg}
     \caption{Ubicación de las empresas}
     \label{fig:enter-label}
 \end{figure}
+\paragraph{}
 Se ha personalizado la web para que contenga el logo, el nombre, la misión, el correo electrónico, la localización y el número de teléfono y se ha cambiado los colores a blanco y a azul.
+\newpage
 \begin{figure}[h]
     \centering
     \includegraphics[width=1\linewidth]{fotosConfiguración/personalización.png}
     \caption{Personalizaciones de la web}
     \label{fig:enter-label}
 \end{figure}
-
-Además, se han realizado optimizaciones de SEO, para mejorar el ranking de la web en Google, para ello se ha añadido el logo, un título y una descripción adecuada y se han añadido palabras clave como alquiler, coche, viaje y en inglés, rent, car.
+\paragraph{}
+Además, se han realizado optimizaciones de SEO, para mejorar el ranking de la web en Google, para ello se ha añadido el logo, un título y una descripción adecuada y se han añadido palabras clave como alquiler, coche, viaje y en inglés, rent, car, visible en la figura \ref{fig:seo}.
 \newpage
 \begin{figure}[h]
     \centering
     \includegraphics[width=1\linewidth]{fotosConfiguración/seo.png}
     \caption{Configuración del SEO}
-    \label{fig:enter-label}
+    \label{fig:seo}
 \end{figure}
 
 \paragraph{}
 Por último, hemos logrado implementar un servidor SSL localmente que nos permite acceder a nuestra web desde un dominio propio con conexión segura utilizando un servidor Nginx. 
+\newpage
 \begin{figure}[h]
     \centering
     \includegraphics[width=1\linewidth]{SSL.png}
