--- a/memoria/text/recomFin.tex
+++ b/memoria/text/recomFin.tex
@@ -78,8 +78,8 @@ Durante estos dos meses hemos estado analizando cada uno de los módulos más re
     \item Relación con clientes (CRM): La tarea que desempeña este módulo escompleja, pero que se ha podido implementar relativamente rápido ya que a pesar de su gran cantidad de posibilidades a la hora de realizar la configuración es intuitivo.
     \item Gestión de personal (HR): Todo empresa en algun momento va a necesitar gestionar sus empleados, lo que hace que este módulo sea muy importante en la gestión de una empresa. Se ha configurado de forma sencilla. Cabe destacar que pensamos que esta funcionalidad no es muy escalable si el número de empleados aumenta considerablemente.
     \item Contabilidad y finanzas (FICO): Odoo 17.0 tiene un gran problema con este módulo y se tiene que recurrir a software externo para resolverlo. Su implementación no aparenta ser sencilla, dado sugerido no es oficial y no asegura que se pueda completar esta tarea con éxito. Existen otras alternativas que se podrían analizar en caso de necesidad.
-    \item Business Intelligence: Este módulo permite la visualización de los diferentes ámbitos de la compañía de una manera adecuada. Sin embargo, no aporta una gran mejora en su objetivo ya que lo que hace es centralizar la información que ya se visualizaba en los demás módulos.
-    \item Gestión del conocimiento: Este módulo tiene una gran importancia ya que permite 
+    \item Business Intelligence: Es una herramienta poderosa para la visualización y el análisis de datos empresariales, lo que ayuda a los usuarios a tomar decisiones más informadas y a mantenerse al tanto del rendimiento de su empresa. Consideramos que su papel en el ERP es muy bueno pero no esencial. Es un módulo útil para los directivos de la empresa, sin embargo, nos hubiera gustado que fuese más personalizable. 
+    \item Gestión del conocimiento: Este módulo es muy útil para mejorar la comunicación interna y la colaboración dentro de una empresa, proporcionando un espacio centralizado para que los empleados compartan ideas, discutan temas relevantes y trabajen juntos de manera más efectiva. Además los foros tienen alto grado de personalización. Además, estos pueden ser públicos, facilitando la comunicación con clientes o clientes potenciales. Lo que más nos ha gustado es el sistema de recompensas a las personas más colaboradoras.
 \end{itemize}
 
 \paragraph{}
@@ -90,7 +90,6 @@ Por último hemos realizado una tabla de agregación de resultados (Cuadro \ref{
 
 \begin{table}
 \centering
-\caption{Tabla de los pesos asignados a cada factor}
 \begin{tabular}{|l|l|l|l|} 
 \hline
 \textbf{Factor}         & \textbf{Peso} & \textbf{Ooo 17.0} & \textbf{Observaciones}                                                                                                                                                                                                                                          \\ 
