--- a/memoria/text/configuracion.tex
+++ b/memoria/text/configuracion.tex
@@ -136,6 +136,7 @@ Por último, abrimos nuestro navegador y buscamos https://localhost. Si hemos re
 Este mensaje es normal que nos aparezca ya que nuestro certificado no es validado por una entidad externa, ya que nosotros hemos generado un certificado auto firmado el cual simula una conexión segura HTTPS sin ningún coste adicional. Por lo tanto si pulsamos en \textit{Advanced} y luego en ir a la página se nos abrirá nuestra web con el certificado SSL.
 
 \subsection{Resultados y análisis}
+\paragraph{}
 En primer lugar, se ha configurado la página web para que se pueda mostrar en 3 idiomas: Español, Inglés(UK) e Inglés(US), ya que son los 3 idiomas que se hablan donde se ubican las compañías. 
 \begin{figure}[h]
     \centering
