--- a/memoria/text/contabilidad.tex
+++ b/memoria/text/contabilidad.tex
@@ -2,6 +2,7 @@
 \subsection{Autoevaluación}
 En esta sección se ha cumplido los objetivos correspondientes al 10.
 \subsection{Introducción}
+\paragraph{}
 Uno de los módulos esenciales para cualquier empresa es el módulo de finanzas y contabilidad. Este debe de ayudar a sus usuarios a gestionar sus beneficios y gastos, además de encargarse de automatizar labores administrativos como la declaración de la renta o la gestión de impuestos. En esta sección se busca analizar el problema del módulo FICO de Odoo y buscar una solución, que nos permite gestionar la contabilidad y finanzas desde nuestro ERP. Para ello hemos realizado un estudio detallado sobre la gestión contable y financiera en Odoo, centrándose en el contexto español. Se identifican los problemas del módulo FICO en Odoo, se propone una solución en la nube y se describe el proceso de integración con Odoo. Este estudio tiene como objetivo proporcionar una visión integral de las opciones disponibles para las PYMEs españolas en términos de contabilidad y finanzas.
 \subsection{Metodología}
 \paragraph{}
@@ -65,7 +66,7 @@ En la Figura \ref{fico} podemos ver el proceso de integración de forma visual.
 \subsection{Conclusiones}
 Tras analizar el problema y las posibles soluciones externas podemos concluir:
 \subsection{Conclusiones}
-
+\paragraph{}
 Basándonos en el análisis detallado realizado, las conclusiones se derivan de los siguientes puntos clave:
 
 \begin{enumerate}
@@ -77,5 +78,5 @@ Basándonos en el análisis detallado realizado, las conclusiones se derivan de 
     
     \item \textbf{Proceso de Integración:} Para facilitar la integración con Odoo, se utilizará el módulo Sage Integration, que simplifica la sincronización entre ambas plataformas. Se seguirán los pasos detallados proporcionados por la herramienta para establecer una conexión fluida y efectiva entre Sage Business Cloud Contabilidad y el ERP Odoo.
 \end{enumerate}
-
+\paragraph{}
 En resumen, la selección de Sage Business Cloud Contabilidad como solución alternativa para los problemas identificados en el módulo FICO de Odoo se basó en una evaluación cuidadosa de las características, funcionalidades y compatibilidad con los requisitos específicos del contexto español. La elección se respalda en la confianza en la plataforma en la nube y en la comunidad detrás de Sage, así como en la facilidad de integración proporcionada por el módulo Sage Integration.
