--- a/memoria/text/gestPers.tex
+++ b/memoria/text/gestPers.tex
@@ -17,8 +17,10 @@ En cuanto al proceso de reclutamiento, vamos a simular una operación en el que 
     \caption{Formulario de entrevista para el puesto de Director de marketing}
     \label{fig:enter-label}
 \end{figure}
+\paragraph{}
 A continuación, en el modulo de reclutamiento se ha hecho clic al enlace Página de trabajos del puesto de Director de marketing. Se ha rellenado el formulario de la solicitud con la información correspondiente y se ha añadido el currículum y se ha enviado. Desde el módulo de Reclutamiento se ha podido ver la solicitud del puesto. Se ha hecho clic en él y se ha asignado en la opción de habilidades un nivel avanzado de Alemán y Francés y 1 año de experiencia en operaciones internacionales con suiza. Se ha realizado el proceso de reclutamiento con dos entrevistas se ha propuesto un contrato y se ha firmado. Finalmente, se ha creado un usuario de tipo empleado para el nuevo Director de marketing.
 \subsection{Resultados y análisis}
+\paragraph{}
 Durante este apartado se ha creado en la compañía matriz un departamento de Administración, de Ventas y de Servicios profesionales, en la rama CochesMA.UK un departamento de Gestión y de Ventas y en la rama CochesMA.US un departamento de Personal y de Servicios profesionales. 
 \begin{figure}[h]
     \centering
@@ -26,6 +28,7 @@ Durante este apartado se ha creado en la compañía matriz un departamento de Ad
     \caption{Lista de departamentos de la compañía}
     \label{fig:enter-label}
 \end{figure}
+\paragraph{}
 Además, se han creado los siguientes puestos de trabajo dentro de cada departamento. Para el departamento de Administración un puesto de Director Ejecutivo, para el de Servicios profesionales un Director Técnico y un consultor, para el de Personal un Gestor de personal y para el Ventas un Responsable de comunicación y ventas. Se han creado 9 empleados, tantos como usuarios había y se han distribuido entre los puestos de trabajo. 
 \begin{figure}[h]
     \centering
@@ -39,6 +42,7 @@ Además, se han creado los siguientes puestos de trabajo dentro de cada departam
     \caption{Lista de empleados de la compañía}
     \label{fig:enter-label}
 \end{figure}
+\paragraph{}
 Se ha creado un nuevo puesto de trabajo, Director de marketing y se ha simulado el proceso de reclutamiento y contratación de un nuevo empleado para este puesto utilizando la vista Kanban de solicitudes.
 \begin{figure}[h]
     \centering
@@ -46,6 +50,13 @@ Se ha creado un nuevo puesto de trabajo, Director de marketing y se ha simulado 
     \caption{Solicitud al puesto de Director de marketing}
     \label{fig:enter-label}
 \end{figure}
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=1\linewidth]{fotosGestPers/kanban.png}
+    \caption{Vista kanban con los candidatos y su estado en el proceso de reclutamiento}
+    \label{fig:enter-label}
+\end{figure}
+\paragraph{}
 Por último, se ha creado un BPMN del proceso de reclutamiento realizado.
 \begin{figure}[h]
     \centering
@@ -53,7 +64,9 @@ Por último, se ha creado un BPMN del proceso de reclutamiento realizado.
     \caption{Solicitud al puesto de Director de marketing}
     \label{fig:enter-label}
 \end{figure}
+
 \subsection{Conclusiones}
+\paragraph{}
 Durante la evaluación de la gestión de personal en Odoo, hemos observado que la parte relacionada con la creación de departamentos, puestos de trabajo y empleados se llevó a cabo de manera adecuada y eficiente. Se ha demostrado una comprensión clara de cómo configurar la estructura organizativa y asignar roles y responsabilidades dentro de la empresa. 
 \paragraph{}
 Sin embargo, en lo que respecta al reclutamiento y la gestión de solicitudes, hemos identificado algunos aspectos que requieren mejoras. Por ejemplo, hemos observado la necesidad de añadir manualmente desde Odoo las habilidades, experiencia y lenguaje del candidato, lo cual puede resultar poco práctico al no ser incluido directamente en el proceso de solicitud. Además, es importante tener en cuenta que la eficiencia de la gestión puede disminuir cuando se generan grandes cantidades de empleados.
